--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "icons": "^1.0.0",
     "next": "^14.2.3",
-    "react": "^18.1.0",
-    "react-dom": "18.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^4.4.0",
     "react-type-animation": "^3.2.0"
   },
