--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.3.30",
     "icons": "^1.0.0",
     "next": "^14.2.6",
     "react": "^18.3.1",
@@ -18,7 +19,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
-    "eslint": "9.9.1",
+    "eslint": "^8.0.0",
     "eslint-config-next": "14.2.6",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10"
