--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "daisyui": "^4.12.10",
     "framer-motion": "^11.3.30",
     "icons": "^1.0.0",
     "next": "^14.2.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-type-animation": "^3.2.0"
+    "react-type-animation": "^3.2.0",
+    "theme-change": "^2.5.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
